<resources>
    <string name="app_name">PhotoMemorial</string>

    <string name="str_permission_denied_message">권한을 허용하지 않으면 앱이 정상적으로 작동하지 않을 수 있습니다.</string>
    <string name="msg_uri_is_null">사진에서 장소 정보를 가져올 수 없어요.</string>
    <string name="msg_illegal_uri">올바르지 않은 형식입니다.</string>
    <string name="msg_image_not_from_the_gallery">This uri is not picking from gallery, Maybe pick from providers..</string>
    <string name="msg_not_available_foreign_country">국내에서 찍은 사진만 가능해요.</string>
    <string name="msg_off_gps">GPS를 활성화 한 후 다시 시도해주세요.</string>
    <string name="msg_deleted_photo">갤러리에서 삭제된 사진입니다, 마커를 삭제합니다.</string>
    <string name="msg_not_allowed_duplication">이미 저장되어 있는 사진입니다.</string>
    <string name="msg_only_allowed_from_gallery">갤러리에서 사진을 선택해주세요.</string>
    <string name="msg_cannot_found_from_around">주변에서 찾을 수 있는 사진이 없습니다.</string>
    <string name="msg_cannot_get_address">주소를 가져올 수 없습니다. 맵을 확대해서 다시 시도하세요.</string>

    <string name="toolbar_title">저장된 추억 %s개</string>
    <string name="photo_get_location">촬영 위치 : %s</string>
    <string name="photo_get_date">촬영 날짜 : %s</string>

    <string name="str_menu_search">검색</string>
    <string name="str_dialog_close">닫기</string>
    <string name="str_remove">삭제</string>
    <string name="str_now_location">현재위치</string>
    <string name="str_photo_list">사진목록</string>
    <string name="str_show_around">주변보기</string>
    <string name="str_not_show_again">다시 보지 않기</string>
    <string name="str_desc_toolbar">왼쪽부터 현재 위치, 주소 검색, 주변 사진입니다.</string>
    <string name="str_desc_zoom">오른쪽 버튼을 사용하여 지도를 줌인, 줌아웃합니다.</string>
    
    <string name="standard_uri">media/external/images/media/</string>

    <string name="share_to_kakao_talk">카카오톡으로 공유</string>
    <string name="share_to_other">공유하기</string>
</resources>